2010-03-25  Tasuku Suzuki  <tasuku.suzuki@nokia.com>

Reviewed by Eric Seidel.

        [Qt]Fix compile error with QT_NO_ANIMATION
        https://bugs.webkit.org/show_bug.cgi?id=36526

        * platform/graphics/qt/GraphicsLayerQt.cpp:
        (WebCore::GraphicsLayerQtImpl::~GraphicsLayerQtImpl):
        * platform/graphics/qt/GraphicsLayerQt.h:

Canonical link: https://commits.webkit.org/47817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56523 268f45cc-cd09-0410-ab3c-d52691b4dbfc